# universal-AAOSA

./: .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
dashboard/: __main__.py  api.py  app.py  cache.py  config.py  graph_model.py  serialization.py
dashboard/collectors/: agents.py  health_checks.py  infra.py  sessions.py
dashboard/templates/: index.html
docs/: documentation-technique.md
docs/backlog/: 2026-06-07-dataflow-edges-dashboard.md  2026-06-07-divider-cycles-dependances.md  2026-06-07-divider-topologie-aggregator.md  2026-06-17-erd-durcissement-types-api-publique.md  2026-06-17-roster-importlib-module-name-collision.md  2026-06-25-readme-quickstart-windows-longpaths.md
docs/demo/: exhibits.md
elo_snapshots/: 2026-05-27T16-53-49.json  2026-05-28T12-38-56.json  2026-05-28T12-54-00.json  2026-05-28T13-00-20.json
rosters/jouet/: agents.yaml
rosters/jouet_hitl/: agents.yaml
runs_demo/: campaign_index.json  campaign_report.md
runs_demo/agents/: registry.json
runs_demo/elo_snapshots/: 2026-06-07T20-42-27.json  2026-06-07T20-45-08.json  2026-06-07T20-49-06.json  2026-06-07T20-51-22.json  2026-06-07T20-54-07.json  2026-06-07T20-56-25.json  2026-06-07T20-58-10.json  2026-06-07T21-00-06.json  2026-06-07T21-03-11.json  2026-06-07T21-05-24.json  2026-06-07T21-07-51.json  2026-06-07T21-18-16.json  2026-06-07T21-22-35.json  2026-06-07T21-24-42.json  2026-06-07T21-26-52.json  latest.json
tests/claiming/: test_dispatch.py  test_dispatch_fn.py  test_phase1.py  test_phase2.py  test_phase2_collect.py  test_phase2_run.py  test_scoring.py
tests/cli/: test_app.py  test_app_solve.py  test_app_solve_roles.py  test_context_dir.py  test_incident_runs.py  test_report.py  test_solve_context_dir.py  test_solve_runs.py  test_solve_runs_roles.py
tests/config/: test_loader.py  test_role_providers.py  test_roster.py
tests/core/: test_agent.py  test_agent_tools.py  test_fs_tools.py  (+4 more)
(+290 files in other folders)
