[project]
name = "universal-aaosa"
version = "0.1.0"
description = "Runtime multi-agents à coordination bottom-up par claiming, agnostique au domaine"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aaosa"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
