[project]
name = "universal-aaosa"
version = "0.2.1"
description = "Runtime multi-agents à coordination bottom-up par claiming, agnostique au domaine"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13",
    "openai>=2.0",
    "python-dotenv>=1.0",
    "flask>=3.1",
    "pyyaml>=6.0",
    "typer>=0.26.7",
    "pathspec>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
]

[project.scripts]
aaosa = "aaosa.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aaosa", "dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
